# SynAD

./: .gitattributes  .gitignore  README.md  demo.ipynb  pyproject.toml
data/: B-H_HTE.xlsx  CPA_HTE.xlsx  CPA_lit.xlsx  NiCOlit.xlsx  Pd-catalyzed_lit.xlsx  Suzuki_HTE.xlsx  ULD.xlsx
descriptor/B-H_HTE/: SPOC.csv
descriptor/CPA_HTE/: SPOC.csv
descriptor/CPA_lit/: SPOC.csv
descriptor/NiCOlit/: SPOC.csv
descriptor/Pd-catalyzed_lit/: SPOC.csv
descriptor/Suzuki_HTE/: SPOC.csv
descriptor/ULD/: QMdesc_add1-ullmann_with_ligand.csv  QMdesc_add1.h5  QMdesc_add2-ullmann_with_ligand.csv  QMdesc_add2.h5  QMdesc_ligand-ullmann_with_ligand.csv  QMdesc_product-ullmann_with_ligand.csv  QMdesc_product.h5  QMdesc_r1-ullmann_with_ligand.csv  QMdesc_reactant.h5  ligand2_QMdesc_datadf.csv  new_solvent_par-ullmann_with_ligand-old.csv  product1_QMdesc_datadf.csv  solvent_param.csv
descriptor/plot/: distance_with_error_plot.py  draw_settings.py  hyperparam_performance_demo.py  synad_benchmark.py  synad_score_plot.py  yield_distribution.py
plot/: performance_improvement.py  predict_performace-with_desc.py  predict_performace.py  synad_performance_with_dataset.py
src/: dataset_dissociation.py  predict.py  predict_settings.py  predict_with_chemprop.py  synad_eval_for_ULD.py  synad_eval_for_datasets.py  synad_hyperparam_opt.py  synad_score_evaluate_with_year.py  synad_score_for_ligand.py  synad_visualization.py
src/chemprop_models/ULD_fold_0/: model.pt
src/chemprop_models/ULD_fold_1/: model.pt
src/logs/: synad_eval_other_datasets.csv
src/logs/B-H_HTE/SynAD/: XGB_yield_importance_with_by_ligand_partition.csv  synad_results_for_ZKNN_with_by_ligand_smiles_split.csv
src/logs/CPA_HTE/SynAD/: XGB_ddG_importance_with_by_catalyst_partition.csv  synad_results_for_ZKNN_with_by_catalyst_split.csv
src/logs/CPA_lit/SynAD/: XGB_ddG_importance_with_by_ligand_smiles_partition.csv  synad_results_for_ZKNN_with_by_ligand_smiles_split.csv
src/logs/NiCOlit/SynAD/: XGB_yield_importance_with_by_doi_partition.csv  synad_results_for_ZKNN_with_by_doi_split.csv
src/logs/Pd-catalyzed_lit/SynAD/: XGB_yield_importance_with_by_literature_id_partition.csv  synad_results_for_ZKNN_with_by_literature_id_split.csv
src/logs/Suzuki_HTE/SynAD/: XGB_yield_importance_with_by_ligand_smiles_partition.csv  synad_results_for_ZKNN_with_by_ligand_smiles_split.csv
src/logs/ULD/: ADA_yield_test.csv  ADA_yield_train.csv  BAG_yield_test.csv  BAG_yield_train.csv  BNN_yield_test.csv  BNN_yield_train.csv  CAT_yield_test.csv  CAT_yield_train.csv  GAU_yield_test_pass.csv  GAU_yield_train.csv  LGB_yield_test.csv  LGB_yield_train.csv  NN_yield_test.csv  NN_yield_train.csv  RF_yield_test.csv  RF_yield_train.csv  SVM_yield_test.csv  SVM_yield_train.csv  XGB_yield_test.csv  XGB_yield_train.csv  dataset_dissociation.csv  synad_eval_ULD.csv  synad_score_with_year.csv
src/logs/ULD/SynAD/: XGB_yield_importance_with_by_ligand1_partition.csv  XGB_yield_importance_with_by_paper_partition.csv  XGB_yield_importance_with_by_year_partition.csv  XGB_yield_importance_with_random_partition.csv  XGB_yield_test_with_by_ligand1_partition.csv  XGB_yield_test_with_by_paper_partition.csv  XGB_yield_test_with_by_year_partition.csv  XGB_yield_test_with_random_partition.csv  XGB_yield_train_with_by_ligand1_partition.csv  XGB_yield_train_with_by_paper_partition.csv  XGB_yield_train_with_by_year_partition.csv  XGB_yield_train_with_random_partition.csv  ZKNN_for_yield_synad_hyperparam_search_with_by_paper_partition.csv  hyperparam_eval_for_ZKNN-Z=0.5,k=4.csv  hyperparam_eval_for_ZKNN-Z=1.0,k=3.csv  (+22 more)
src/modules/: data_load.py  desc_process.py  synad_eval.py
src/synad/: __init__.py  utils_func.py
src/synad/core/: __init__.py  synad.py  train_model.py
src/synad/evaluation/: __init__.py  synad_evaluation.py  synad_score_evaluate.py
src/synad/models/: __init__.py  methods_NN.py  methods_traditional.py
(+6 files in other folders)
